# internal/handlers/struct.go
@@ -1,7 +1,8 @@
 package handlers
 
+// User - структура данных о пользователе
 type User struct {
-	Email string `json:"email"`
-	Pass  string `json:"password"`
-	Ref   string `json:"ref"`
+    Email string `json:"email"`     // Адрес электронной почты пользователя
+    Pass  string `json:"password"`  // Пароль пользователя
+    Ref   string `json:"ref"`       // Реферальный код пользователя, если есть
 }
